# rbautofillbug

./: README.md  setup.cfg  setup.py
rbautofillbug/: admin_urls.py  extension.py  forms.py  views.py
rbautofillbug/templates/rbautofillbug/: configure.html
tests/: test_extension.py
