[metadata]
name = rbautofillbug
version = 0.1.4
description = A ReviewBoard extension that extracts bug IDs from review request summaries
author = Jeremie Jost
author_email = jeremiejost@gmail.com

[options]
packages = find:

[options.package_data]
rbautofillbug = 
    templates/rbautofillbug/*.txt
    templates/rbautofillbug/*.html

[options.entry_points]
reviewboard.extensions =
    rbautofillbug = rbautofillbug.extension:AutoFillBugExtension